Use valueOf for type conversion in Variable class
Replaces explicit constructor calls with valueOf methods for Integer, Long, and Double conversions in the Variable class. This change improves code clarity and leverages Java's recommended approach for boxing primitive values.